# nonebot-plugin-game-torrent

./: .deepsource.toml  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-反馈.md
.github/workflows/: python-package.yml  ruff-check.yml
nonebot_plugin_game_torrent/: Aimhaven.py  __init__.py  __main__.py  base_model.py  config.py  exception.py  fitgirl.py  hook.py  match.py  utils.py
nonebot_plugin_game_torrent/fetcher/: __init__.py  aimhaven.py  base_model.py  fitgirl.py
tests/: conftest.py  main.py
