[tool.poetry]
name = "nonebot-plugin-game-torrent"
version = "0.1.4"
description = "a plugin for nonebot to fetch game torrent from Aimheaven"
authors = ["Cvandia"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_game_torrent"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.27.0"
fake-useragent = "^1.1.3"
nonebot-plugin-waiter = ">=0.6.2"
bs4 = "^0.0.2"
nonebot2 = ">=2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
